--- a/Mission06_Biggs/Views/Home/About.cshtml
+++ b/Mission06_Biggs/Views/Home/About.cshtml
@@ -3,4 +3,14 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<ul>
+    <li>
+        <a href="https://www.qwcomedy.com/">QW Comedy</a>
+    </li>
+    <li>
+        <a href="https://baconsale.com/">Bacon Sale</a>
+    </li>
+    <li>
+        <a href="https://baconsale.com/"><img src="~/images/BaconsaleKate.jpg" /></a>
+    </li>
+</ul>
