--- a/Mission06_Biggs/Views/Home/Index.cshtml
+++ b/Mission06_Biggs/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p></p>
+    <h1 class="display-4">The Joel Hilton Film Collection</h1>
+    <img src="~/images/JoelHiltonHeadshot.jpg" />
 </div>
