--- a/Mission06_Biggs/Views/Home/Confirmation.cshtml
+++ b/Mission06_Biggs/Views/Home/Confirmation.cshtml
@@ -2,5 +2,5 @@
 	ViewData["Title"] = "Confirmation";
 }
 
-<h1>Movies submitted.</h1>
+<h1>Movie submitted/Updated</h1>
 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Back to Home</a>
