--- a/Mission06_Biggs/Views/Shared/_Layout.cshtml
+++ b/Mission06_Biggs/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
+							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MovieList">View Movies</a>
+                        <li class="nav-item">
 							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddMovie">Add Movie</a>
 						</li>
                     </ul>
