--- a/Mission06_Biggs/Views/Home/AddMovie.cshtml
+++ b/Mission06_Biggs/Views/Home/AddMovie.cshtml
@@ -1,24 +1,30 @@
-﻿@model Mission06_Biggs.Models.MovieModel
+﻿@model Mission06_Biggs.Models.Movie
 @{
 	ViewData["Title"] = "Add/Edit Movie";
 }
 
 <form method="post">
-    <input type="hidden" asp-for="movieId" />
+    <input type="hidden" asp-for="MovieId" />
     <label asp-for="Title" required>Title:</label>
     <input asp-for="Title" required>
     <br />
-    <label asp-for="Category" required>Category:</label>
-    <input asp-for="Category" required>
+    <label asp-for="CategoryId">Category:</label>
+    <select asp-for="CategoryId">
+			<option value="0" hidden>Category:</option>
+            @foreach (Category c in ViewBag.Categories)
+            {
+            <option value="@c.CategoryId">@c.CategoryName</option>
+            }
+	</select>
     <br />
     <label asp-for="Year" required>Year:</label>
     <input asp-for="Year" required>
     <br />
-    <label asp-for="Director" required>Director:</label>
-    <input asp-for="Director" required>
+    <label asp-for="Director" >Director:</label>
+    <input asp-for="Director" >
     <br />
-    <label asp-for="Rating" required>Rating:</label>
-    <select asp-for="Rating" required>
+    <label asp-for="Rating" >Rating:</label>
+    <select asp-for="Rating" >
         <option value="G">G</option>
         <option value="PG">PG</option>
         <option value="PG-13">PG-13</option>
@@ -27,15 +33,24 @@
     <br />
     <label asp-for="Edited">Edited:</label>
     <select asp-for="Edited">
-        <option value="true">Yes</option>
-        <option value="false">No</option>
+        <option value="1">Yes</option>
+        <option value="0">No</option>
     </select>
     <br />
     <label asp-for="LentTo">Lent To:</label>
     <input asp-for="LentTo">
     <br />
+    <label asp-for="CopiedToPlex">Copied To Plex:</label>
+    <select asp-for="CopiedToPlex">
+        <option value="1">Yes</option>
+		<option value="0">No</option>
+	</select>
+    <br />
     <label asp-for="Notes">Notes:</label>
     <input asp-for="Notes" maxlength="25">
     <br />
     <button type="submit">Submit</button>
+
+    <div asp-validation-summary="All" class="text-danger"></div>
+
 </form>
